# fastpente

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml  test_pente.py
python/pente/: __init__.py
rust/: lib.rs
src/: alphabetaplayer.rs  board.rs  game.rs  lib.rs  main.rs  mcts_player.rs  player.rs  random_player.rs
