[package]
name = "pente"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pente"
crate-type = [ "cdylib",]

[dependencies]
ndarray = "0.15.6"

[dependencies.pyo3]
version = "0.16.2"
features = [ "extension-module",]
